--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-        	<groupId>com.example</groupId>
-        	<artifactId>SpringJPA</artifactId>
-        	<version>0.0.1-SNAPSHOT</version>
-        </dependency>
+        <!-- Removed unavailable dependency SpringJPA -->
     </dependencies>
 
     <build>
